@@ -3,7 +3,7 @@ module Spec
     unless defined? MAJOR
       MAJOR = 0
       MINOR = 5
-      TINY  = 3
+      TINY  = 4
 
       STRING = [MAJOR, MINOR, TINY].join('.')
 
